kubernetes/apps/media/plex/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: plex
spec:
  parentRefs:
    - name: lan-l4-plex
      sectionName: plex
  rules:
    - backendRefs:
        - name: plex
          port: 32400
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: plex-tailscale
spec:
  parentRefs:
    - name: plex-tailscale
      sectionName: plex
  rules:
    - backendRefs:
        - name: plex
          port: 32400
